--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,9 +1,11 @@
+.product{
+    border-style: ridge;
+}
 .product-layout {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style-type: none;
 }
-
 
 .header-bar {
     display: grid;
@@ -13,8 +15,8 @@
 
 .product-list {
     display: grid;
-    row-gap: 100px;
-    column-gap: 5px;
+    row-gap: 20px;
+    column-gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
     list-style-type: none;
 }
