--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,10 +1,12 @@
 .product {
     border-style: ridge;
-
 }
 
 .product-layout {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style-type: none;
+}
+.register_header{
+    margin-top: 40px;
 }
