--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #dee9ff;
+    background-color: #ffd96c;
 }
 
 .registration-form {
@@ -18,7 +18,7 @@ body {
 
 .registration-form .form-icon {
     text-align: center;
-    background-color: #5891ff;
+    background-color: #000000;
     border-radius: 50%;
     font-size: 40px;
     color: white;
@@ -40,7 +40,7 @@ body {
     padding: 10px 20px;
     font-size: 18px;
     font-weight: bold;
-    background-color: #5791ff;
+    background-color: #000000;
     border: none;
     color: white;
     margin-top: 20px;
@@ -54,9 +54,12 @@ body {
     text-align: center;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    color: #9fadca;
     border-top: 1px solid #dee9ff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+}
+
+a {
+    color: #000000;
 }
 
 @media (max-width: 576px) {
