footer sidebar color change

--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,6 +1,6 @@
 .footer-main{
-    background-color: #ffbb33;
+    background-color: #ffa90c;
 }
 .footer-mini{
-    background-color: #FF8800;
+    background-color: #ffb733;
 }
