--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,8 +1,7 @@
-.product {
-    border-style: ridge;
-}
-
 .product-layout {
+    padding-left: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style-type: none;
@@ -10,4 +9,21 @@
 
 .register_header {
     margin-top: 40px;
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1400px;
+    }
+}
+
+
+.product {
+    height: 100%;
+    display: inline-block;
+    border: ridge;
+}
+
+.content {
+    min-height: 100%;
 }
