--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -224,3 +224,27 @@ select {
     font-size: 22px;
     vertical-align: middle;
 }
+
+.cart-buttons {
+    font-size: 13px;
+}
+
+.quantity-style {
+    font-size: 20px;
+}
+
+.cart-item-style {
+    font-size: 32px;
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 30px;
+}
+
+.quantity-label-style {
+    font-size: 16px;
+}
+
+.cart-header {
+    padding-left: 20px;
+    padding-bottom: 30px;
+}
