--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -228,7 +228,7 @@ select {
 }
 
 .cart-buttons {
-    font-size: 13px;
+    font-size: 20px;
 }
 
 .quantity-style {
@@ -254,4 +254,11 @@ select {
 #comment {
     margin-top: 200px;
     margin-bottom: 20px;
+}
+
+.label-styling-bold-3 {
+    padding-top: 50px;
+    font-size: 40px;
+    font-weight: bold;
+    padding-bottom: 20px;
 }
