--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -278,3 +278,10 @@ select {
 .change-button {
     margin-top: 30px;
 }
+
+.error-message-cant-add {
+    color: #FF0000;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
