--- a/src/main/webapp/css/chat.css
+++ b/src/main/webapp/css/chat.css
@@ -1,14 +1,4 @@
 @charset "utf-8";
-/* CSS Document */
-
-/* ---------- GENERAL ---------- */
-
-/*body {*/
-/*    background: #e9e9e9;*/
-/*    color: #9a9a9a;*/
-/*    font: 100%/1.5em "Droid Sans", sans-serif;*/
-/*    margin: 0;*/
-/*}*/
 
 a {
     text-decoration: none;
@@ -35,7 +25,7 @@ hr {
     min-height: 1px;
 }
 
-img {
+.chat img {
     border: 0;
     display: block;
     height: auto;
