--- a/src/main/webapp/css/chat.css
+++ b/src/main/webapp/css/chat.css
@@ -25,6 +25,13 @@ hr {
     min-height: 1px;
 }
 
+.main-bot-img {
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .chat img {
     border: 0;
     display: block;
@@ -67,6 +74,7 @@ p {
     right: 24px;
     position: fixed;
     width: 300px;
+    z-index: 1;
 }
 
 #live-chat header {
@@ -91,9 +99,6 @@ p {
     font-size: 12px;
 }
 
-#live-chat h5 {
-    font-size: 10px;
-}
 
 #live-chat form {
     padding: 24px;
@@ -140,6 +145,8 @@ p {
 
 .chat {
     background: #fff;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .chat-history {
@@ -169,4 +176,9 @@ p {
 .chat-feedback {
     font-style: italic;
     margin: 0 0 0 80px;
+}
+
+.chat-label {
+    font-weight: bold;
+    font-size: 13px;
 }
