--- a/src/main/webapp/css/loader.css
+++ b/src/main/webapp/css/loader.css
@@ -6,14 +6,20 @@
 /*    margin-bottom: 1em;*/
 /*}*/
 
-.loader-wrapper-class{
-    margin:auto;
+.loader-wrapper-class {
+    margin-top: 30px;
 }
-.loader-text-class{
-    margin:auto;
+
+.loader-text-class {
+    display: block;
+    text-align: center;
+    color: #FF8C00;
+    font-size: 30px;
+    margin-bottom: 30px;
 }
+
 .circle-loader {
-    margin:auto;
+    margin: auto;
     margin-bottom: 3.5em;
     border: 3px solid rgba(0, 0, 0, 0.2);
     border-left-color: #ffb429;
@@ -24,21 +30,25 @@
     width: 7em;
     height: 7em;
 }
+
 .load-complete {
     -webkit-animation: none;
     animation: none;
     border-color: #ffb429;
     transition: border 500ms ease-out;
 }
+
 .checkmark {
     display: none;
 }
+
 .checkmark.draw:after {
     animation-duration: 800ms;
     animation-timing-function: ease;
     animation-name: checkmark;
     transform: scaleX(-1) rotate(135deg);
 }
+
 .checkmark:after {
     opacity: 1;
     height: 3.5em;
@@ -51,6 +61,7 @@
     top: 3.5em;
     position: absolute;
 }
+
 @keyframes loader-spin {
     0% {
         transform: rotate(0deg);
@@ -59,6 +70,7 @@
         transform: rotate(360deg);
     }
 }
+
 @keyframes checkmark {
     0% {
         height: 0;
